# Makefile.am - Makefile for the Libopencdk library
# 	Copyright (C) 2003 Timo Schulz
#       Copyright (C) 2004, 2005, 2006  Simon Josefsson
#
# This file is part of OpenCDK.
#
# OpenCDK is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# OpenCDK is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with OpenCDK; if not, write to the Free Software Foundation,
# Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA

SUBDIRS = src doc tests

ACLOCAL_AMFLAGS = -I m4

AUTOMAKE_OPTIONS = dist-bzip2

EXTRA_DIST = autogen.sh
